--- a/example/discover_printers/pubspec.yaml
+++ b/example/discover_printers/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.3
   network_info_plus: ^4.0.1
-  image: ^3.0.2
+#  image: ^3.0.2
   esc_pos_printer:
     path: ../../
   intl: ^0.18.0
